@@ -53,6 +53,8 @@
     <string name="pref_summary_vox_audio_icon">Play sound when voice activation button is pressed</string>
     <string name="pref_title_vox_triggered_icon">Voice activation triggered</string>
     <string name="pref_summary_vox_triggered_icon">Play sound when voice activation is triggered</string>
+    <string name="pref_title_intercept_audio_icon">Intercept sound</string>
+    <string name="pref_summary_intercept_audio_icon">Play sound when intercept starts or ends</string>
     <string name="pref_title_private_message_audio_icon">Private message</string>
     <string name="pref_summary_private_message_audio_icon">Play sound when private message is received</string>
     <string name="pref_title_channel_message_audio_icon">Channel message received</string>
@@ -99,6 +101,32 @@
     <string name="pref_summary_channel_join">Announce name of the user joining the channel</string>
     <string name="pref_title_channel_leave">User leaves the channel</string>
     <string name="pref_summary_channel_leave">Announce name of the user leaving the channel</string>
+    <string name="pref_title_subscription_user_msg">User messages subscription</string>
+    <string name="pref_summary_subscription_user_msg">Announce subscription of user messages</string>
+    <string name="pref_title_subscription_channel_msg">Channel messages subscription</string>
+    <string name="pref_summary_subscription_channel_msg">Announce subscription of channel messages</string>
+    <string name="pref_title_subscription_broadcast_msg">Broadcast messages subscription</string>
+    <string name="pref_summary_subscription_broadcast_msg">Announce subscription of broadcast messages</string>
+    <string name="pref_title_subscription_voice">Voice stream subscription</string>
+    <string name="pref_summary_subscription_voice">Announce subscription of voice streams</string>
+    <string name="pref_title_subscription_vid">Video stream subscription</string>
+    <string name="pref_summary_subscription_vid">Announce subscription of video streams</string>
+    <string name="pref_title_subscription_desk">Desktop session subscription</string>
+    <string name="pref_summary_subscription_desk">Announce subscription of desktop sessions</string>
+    <string name="pref_title_subscription_media">Media stream subscription</string>
+    <string name="pref_summary_subscription_media">Announce subscription of media streams</string>
+    <string name="pref_title_subscription_intercept_user_msg">User messages intercept</string>
+    <string name="pref_summary_subscription_intercept_user_msg">Announce intercept of user messages</string>
+    <string name="pref_title_subscription_intercept_channel_msg">Channel messages intercept</string>
+    <string name="pref_summary_subscription_intercept_channel_msg">Announce intercept of channel messages</string>
+    <string name="pref_title_subscription_intercept_voice">Voice stream intercept</string>
+    <string name="pref_summary_subscription_intercept_voice">Announce intercept of voice streams</string>
+    <string name="pref_title_subscription_intercept_vid">Video stream intercept</string>
+    <string name="pref_summary_subscription_intercept_vid">Announce intercept of video streams</string>
+    <string name="pref_title_subscription_intercept_desk">Desktop session intercept</string>
+    <string name="pref_summary_subscription_intercept_desk">Announce intercept of desktop sessions</string>
+    <string name="pref_title_subscription_intercept_media">Media stream intercept</string>
+    <string name="pref_summary_subscription_intercept_media">Announce intercept of media streams</string>
     <string name="pref_title_private_message">Private messages</string>
     <string name="pref_summary_private_message">Announce private messages</string>
     <string name="pref_title_channel_message">Channel messages</string>
@@ -130,6 +158,21 @@
     <string name="text_tts_private_message">Private message from %1$s - %2$s</string>
     <string name="text_tts_channel_message">Channel message from %1$s - %2$s</string>
     <string name="text_tts_broadcast_message">Broadcast message from %1$s - %2$s</string>
+    <string name="text_tts_subscription_user_msg_changed">changed subscription user messages to:</string>
+    <string name="text_tts_subscription_channel_msg_changed">changed subscription channel messages to:</string>
+    <string name="text_tts_subscription_broadcast_msg_changed">changed subscription broadcast messages to:</string>
+    <string name="text_tts_subscription_voice_changed">changed subscription voice to:</string>
+    <string name="text_tts_subscription_vid_changed">changed subscription video to:</string>
+    <string name="text_tts_subscription_desk_changed">changed subscription desktop to:</string>
+    <string name="text_tts_subscription_media_changed">changed subscription media files to:</string>
+    <string name="text_tts_subscription_intercept_user_msg_changed">changed subscription intercept user messages to:</string>
+    <string name="text_tts_subscription_intercept_channel_msg_changed">changed subscription intercept channel messages to:</string>
+    <string name="text_tts_subscription_intercept_voice_changed">changed subscription intercept voice to:</string>
+    <string name="text_tts_subscription_intercept_vid_changed">changed subscription intercept video to:</string>
+    <string name="text_tts_subscription_intercept_desk_changed">changed subscription intercept desktop to:</string>
+    <string name="text_tts_subscription_intercept_media_changed">changed subscription intercept media files to:</string>
+    <string name="text_tts_subscribe_on">on</string>
+    <string name="text_tts_subscribe_off">off</string>
     <string name="pref_header_soundsystem">Sound System</string>
     <string name="title_activity_audio_codec">Audio Codec</string>
     <string name="title_activity_filepicker">File Selection</string>
