@@ -34,6 +34,8 @@ Android Client
 - Added popup menu actions in Server List dialog
 - Added "Message" and "User properties" user menu actions in channel list tab
 - Ability to play sound when voice activation toggle
+- Ability to play sound for intercepts
+- Ability to announce subscription and intercept changes
 - Ability to export each server in to a .tt file separately
 - Nickname and Last Joined Channel are now stored in .tt file
 - Broadcast messages, users logged in, and users logged out are now shown in the chat list
